Change to make it build

--- a/jipcam-axis/jipcam-axis-emulator/pom.xml
+++ b/jipcam-axis/jipcam-axis-emulator/pom.xml
@@ -83,7 +83,7 @@
 			<groupId>net.sf.jipcam</groupId>
 			<artifactId>jipcam-axis-core</artifactId>
 			<scope>compile</scope>
-			<version>${pom.parent.version}</version>
+			<version>${project.parent.version}</version>
 		</dependency>
 	</dependencies>
 
